fixed type of css, added defer to js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="style.css" rel="stylesheet">
-        <script type="text/javascript" src="script.js"></script>
+        <link href="style.css" type="stylesheet">
+        <script type="text/javascript" src="script.js" defer></script>
     </head>
 </html>
