--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="style.css" type="stylesheet">
+        <link href="style.css" rel="stylesheet">
         <script type="text/javascript" src="script.js" defer></script>
     </head>
+    <body>
+        <div id="container"></div>
+    </body>
 </html>
