added unstylized reset button with function

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script type="text/javascript" src="script.js" defer></script>
     </head>
     <body>
+        <button type="button" id="reset">Reset</button>
         <div id="container"></div>
     </body>
 </html>
