--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <button type="button" id="reset">Reset</button>
+        <button type="button" id="resize">Resize Grid</button>
         <div id="container"></div>
     </body>
 </html>
