added styling, gave up on tint button

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <title>Etch-A-Sketch!</title>
     </head>
     <body>
-        <button type="button" id="reset">Reset</button>
-        <button type="button" id="resize">Resize Grid</button>
-        <button type="button" id="rainbow">Rainbow Mode</button>
-        <button type="button" id="black-and-white">Black and White Mode</button>
-        <div id="container"></div>
+        <button type="button" class="button" id="reset">Reset</button>
+        <button type="button" class="button" id="resize">Resize Grid</button>
+        <button type="button" class="button" id="rainbow">Rainbow Mode</button>
+        <button type="button" class="button" id="black-and-white">Black and White Mode</button>
+<!--         <button type="button" id="tint">Tint</button>
+ -->    <div id="container"></div>
     </body>
 </html>
